Highcontrast system colors and minor fixes for breadcrumb-dropdown

--- a/packages/office-ui-fabric-react/src/components/Callout/Callout.scss
+++ b/packages/office-ui-fabric-react/src/components/Callout/Callout.scss
@@ -30,10 +30,7 @@ $Callout-smallbeak-slant-width: 16px;
   @include focus-clear();
 
   @media screen and (-ms-high-contrast: active) {
-    border: 1px solid $ms-color-white;
-  }
-  @media screen and (-ms-high-contrast: black-on-white) {
-    border: 1px solid $ms-color-black;
+    border: 1px solid WindowText;
   }
 }
 
